--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.0",
+    "multer": "^1.4.4",
     "sequelize": "^6.17.0"
   }
 }
